--- a/minimal-sneakers.html
+++ b/minimal-sneakers.html
@@ -35,7 +35,7 @@
     <div id="imageSection"></div>
   </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="minimal-sneakers.js"></script>
     <script type="text/javascript" src="minimal-sneakers.json"></script>
 </body>
 </html>
