--- a/outdoor-boots.html
+++ b/outdoor-boots.html
@@ -7,26 +7,20 @@
     <link rel="stylesheet" href="/assets/minimal-sneakers.css">
 </head>
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="logo.png" width="80" height="24"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">HOME</a>
-        </li>
-        <li class="nav-item">
+  <nav class="navbar sticky-top navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="logo.png" width="80" height="24"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
           <a class="nav-link" href="#">CONTACT</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#">SIGN IN</a>
-        </li>
-        <li class="nav-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/2956/2956820.png" class="img-fluid backround-image alt="logo.png" width="35">0
-        </li>
-      </ul>
+          <a class="nav-link"><img src="https://cdn-icons-png.flaticon.com/512/2956/2956820.png" class="img-fluid backround-image alt="logo.png" width="35">0</a>
+        </div>
+      </div>
     </div>
   </nav>
   <header>
