--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
       </div>
     </div>
   </article>
+  <footer>
+    <div class="p-sm-7 mt-5 mb-5 ms-6 container">
+        <h2>Shazada</h2>
+        <br>
+        <div class="row">
+        <div class="col-sm-4">
+          <input type="email" class="form-control" id="exampleFormControlInput" plceholder="Enter Your Email">
+        </div>
+        </div>
+    </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="minimal-sneakers.json"></script>
