Adjust the color size in the footer testing

--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
     </div>
   </article>
   <footer>
-    <div class="p-sm-7 mt-5 mb-5 ms-6 container">
+    <div class="mt-5 m-5 ms-5 container">
         <h2>Shazada</h2>
         <br>
-        <div class="row">
-        <div class="col-sm-4">
-          <input type="email" class="form-control" id="exampleFormControlInput" plceholder="Enter Your Email">
+        <div class="row-cols-auto d-flex">
+        <div class="col-sm-3">
+          <input type="email" class="form-control" id="exampleFormControlInput" placeholder="Enter Your Email">
+
         </div>
         </div>
     </div>
