--- a/ballet-pumps.html
+++ b/ballet-pumps.html
@@ -4,29 +4,24 @@
     <title>Shazada Philippines</title>
     <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="/assets/minimal-sneakers.css">
 </head>
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="logo.png" width="80" height="24"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">HOME</a>
-        </li>
-        <li class="nav-item">
+  <nav class="navbar sticky-top navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="logo.png" width="80" height="24"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
           <a class="nav-link" href="#">CONTACT</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="#">SIGN IN</a>
-        </li>
-        <li class="nav-item">
-          <img src="https://cdn-icons-png.flaticon.com/512/2956/2956820.png" class="img-fluid backround-image alt="logo.png" width="35">0
-        </li>
-      </ul>
+          <i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span>
+        </div>
+      </div>
     </div>
   </nav>
   <header>
