--- a/women-categories.html
+++ b/women-categories.html
@@ -4,6 +4,7 @@
     <title>Shazada Philippines</title>
     <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
   <nav class="navbar sticky-top navbar-expand-lg bg-light">
@@ -17,7 +18,7 @@
           <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
           <a class="nav-link" href="#">CONTACT</a>
           <a class="nav-link" href="#">SIGN IN</a>
-          <a class="nav-link"><img src="https://cdn-icons-png.flaticon.com/512/2956/2956820.png" class="img-fluid backround-image alt="logo.png" width="35">0</a>
+          <i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span>
         </div>
       </div>
     </div>
