--- a/index.html
+++ b/index.html
@@ -51,6 +51,44 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
+          <img src=${image.url} class="card-img-top" alt="...">
+          <div class="card-body">
+            <span class="card-title">${image.name}</span>
+            <span class="card-text">${image.price}</span>
+          </div>
+          <div class="card-footer">
+          <a class="btn btn-primary" onclick="addToCart()">Add to cart</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src=${image.url} class="card-img-top" alt="...">
+          <div class="card-body"> 
+          <span class="card-title">${image.name}</span>
+          <span class="card-text">${image.price}</span>
+          </div>
+          <div class="card-footer">
+            <a class="btn btn-primary" onclick="addToCart()">Add to cart</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src=${image.url} class="card-img-top" alt="...">
+          <div class="card-body">
+          <span class="card-title">${image.name}</span>
+          <span class="card-text">${image.price}</span>
+          </div>
+          <div class="card-footer">
+            <a class="btn btn-primary" onclick="addToCart()">Add to cart</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
           <a href="leather-loafers.html"><img src="https://media.gq.com/photos/625d7b7cd969a7417ee2dadc/master/w_960,c_limit/GQ-loafers7-jcrew.jpg" class="card-img-top" alt="..."></a>
           <div class="card-body">
             <h5 class="card-title">Suede Loafers</h5>
@@ -82,7 +120,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </article>
   <footer>
     <div class="mt-5 m-5 ms-5 container">
@@ -98,6 +136,5 @@
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script type="text/javascript" src="index.js"></script>
-    <script type="text/javascript" src="minimal-sneakers.json"></script>
 </body>
 </html>
