rearanged into folder structure

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <a href="male-categories.html"><img src="https://images.indianexpress.com/2018/01/men-model_759_ts.jpg" width="500"></a>
+          <a href="/template/male-categories.html"><img src="https://images.indianexpress.com/2018/01/men-model_759_ts.jpg" width="500"></a>
           <div class='content'>
             <h1 class='title'>MENS</h1>
             <span class='subtitle'>SHOP NOW</span>
           </div>
         </div>
         <div class="col-lg-6">
-          <a href="women-categories.html"><img src="https://static.nike.com/a/images/t_prod/w_1920,c_limit,f_auto,q_auto/97e873a0-0b0a-4ba1-b6cc-ba184fe6a240/image.jpg" width="460"></a>
+          <a href="/template/women-categories.html"><img src="https://static.nike.com/a/images/t_prod/w_1920,c_limit,f_auto,q_auto/97e873a0-0b0a-4ba1-b6cc-ba184fe6a240/image.jpg" width="460"></a>
           <div class='content'>
             <h1 class='title'>WOMENS</h1>
             <span class='subtitle'>SHOP NOW</span>
@@ -135,6 +135,5 @@
     </div>
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
