--- a/index.html
+++ b/index.html
@@ -25,12 +25,8 @@
       </div>
     </div>
   </nav>
-  <header>
-    <div class="container" id="men-women-container"></div>
-  </header>
-  <section class="mt5 pt-5">
-    <h1 class="text-center">BEST SELLER</h1>
-  </section>
+  <header><div class="container" id="men-women-container"></div></header>
+  <section class="mt5 pt-5"><h1 class="text-center">BEST SELLER</h1></section>
   <article id="best-seller-image" class="row row-cols-1 row-cols-md-3 g-4"></article>
   <footer>
     <div class="mt-5 m-5 ms-5 container">
