--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="navbar sticky-top navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="logo.png" width="80" height="24"></a>
+      <a class="navbar-brand" href="index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid" alt="logo.png" width="80" height="24"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -19,7 +19,7 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
           <a class="nav-link" href="#">CONTACT</a>
-          <a class="nav-link" href="#">SIGN IN</a>
+          <a class="nav-link" href="signin.html">SIGN IN</a>
           <i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span>
         </div>
       </div>
