--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <title>Shazada Philippines</title>
-  <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type">
+  <link rel="icon" href="/assets/images/icon/logo.ico" type="image/icon type" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-  <link rel="stylesheet" href="/assets/main.css">
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+  <link rel="stylesheet" href="/assets/main.css" />
   <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 
@@ -26,7 +26,9 @@
           <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
           <a class="nav-link" href="#">CONTACT</a>
           <a class="nav-link" href="#">SIGN IN</a>
-          <button><i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span></button>
+          <button>
+            <i class="fa" style="font-size: 24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span>
+          </button>
         </div>
       </div>
     </div>
@@ -35,24 +37,69 @@
     <div class="container" id="men-women-container"></div>
   </header>
   <section class="mt5 pt-5">
-    <h1 class="text-center">BEST SELLER</h1>
+    <h1 class="text-center">BEST SELLERS</h1>
   </section>
-  <article id="best-seller-image" class="row row-cols-1 row-cols-md-3 g-4"></article>
+  <article id="best-seller-image" class="row row-cols-1 row-cols-md-3 g-4">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <a href="/template/leather-loafers.html"><img
+              src="https://media.gq.com/photos/625d7b7cd969a7417ee2dadc/master/w_960,c_limit/GQ-loafers7-jcrew.jpg"
+              class="d-block w-100" alt="..." /></a>
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Suede Loafers</h5>
+            <p>4000</p>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="/assets/images/silver-mules.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Bow-Tie Mesh Mules - Silver</h5>
+            <p>2000</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="https://www.switchbacktravel.com/sites/default/files/image_fields/Best%20Of%20Gear%20Articles/Hiking%20and%20Backpacking/Hiking%20Boots/La%20Sportiva%20Ultra%20Raptor%20II%20Mid%20GTX%20hiking%20boot.jpeg"
+            class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>La Sportiva Ultra Raptor II Mid GTX</h5>
+            <p>5000</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </article>
   <footer>
     <div class="mt-5 m-5 ms-5 container">
       <h2>Shazada</h2>
-      <br>
+      <br />
       <div class="row-cols-auto d-flex">
         <div class="col-sm-3">
-          <input type="email" class="form-control" id="exampleFormControlInput" placeholder="Enter Your Email">
+          <input type="email" class="form-control" id="exampleFormControlInput" placeholder="Enter Your Email" />
         </div>
       </div>
     </div>
   </footer>
   <script>
     getJSONDataForContainer("/data/index.json");
-    getJSONDataForBestSeller("/data/best-seller.json")
+    getJSONDataForBestSeller("/data/best-seller.json");
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
