--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav class="navbar sticky-top navbar-expand-lg bg-light">
+  <nav class="navbar fixed-top navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img
           src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="
@@ -26,9 +26,8 @@
           <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
           <a class="nav-link" href="#">CONTACT</a>
           <a class="nav-link" href="#">SIGN IN</a>
-          <button>
-            <i class="fa" style="font-size: 24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span>
-          </button>
+          <a href=""><i class="fa" style="font-size: 24px">&#xf07a;</i><span id="cart-count"
+              class="badge text-bg-light bg-danger"></span></a>
         </div>
       </div>
     </div>
