--- a/index.html
+++ b/index.html
@@ -35,11 +35,43 @@
   <header>
     <div class="container" id="men-women-container"></div>
   </header>
+  <div class="wrapper">
+    <img class="shoes-parallax"
+      src="https://t3.ftcdn.net/jpg/03/15/06/10/360_F_315061039_JPz3A8Yd64Ugsy2T6Ez6E9IPwAhs3ftD.jpg">
+  </div>
   <section class="mt5">
-    <h1 class="text-center best-seller">BEST SELLERS</h1>
+    <h1 class="text-center best-seller">BEST SELLER</h1>
   </section>
   <article id="best-seller-image" class="row row-cols-1 row-cols-md-3 g-4">
   </article>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <p>GET IN TOUCH WITH US AND WE CAN HELP YOU</p>
+        <h2>Come to us or ask a question right now</h2>
+        <div class="mb-3 w-25">
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Name" required>
+        </div>
+        <div class="mb-3 w-25">
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your LastName" required>
+        </div>
+        <div class="mb-3 w-25">
+          <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="Phone" required>
+        </div>
+        <div class="mb-3 w-25">
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email" required>
+        </div>
+        <div class="mb-3 w-25">
+          <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
+          <button class="btn btn-warning float-end mt-3">Submit</button>
+        </div>
+        <iframe class="gmap"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.80254902792!2d121.04663401462257!3d14.553281089832637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c8efd99aad53%3A0xb64b39847a866fde!2skodego!5e0!3m2!1sen!2sph!4v1671691698160!5m2!1sen!2sph"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+  </div>
   <footer>
     <div class="mt-5 m-5 ms-5 container">
       <h2>Shazada</h2>
