--- a/index.html
+++ b/index.html
@@ -12,23 +12,31 @@
 </head>
 
 <body>
-  <nav class="navbar fixed-top navbar-expand-lg bg-light">
+  <nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img
-          src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt="
-          logo.png" width="80" height="24"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="/index.html"><img src="
+        https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt=" logo.png"
+          width="80" height="24"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-          <a class="nav-link" href="#">CONTACT</a>
-          <a class="nav-link" href="#">SIGN IN</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link">Sign in</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
           <a href=""><i class="fa" style="font-size: 24px">&#xf07a;</i><span id="cart-count"
-              class="badge text-bg-light bg-danger"></span></a>
-        </div>
+              class="badge text-bg-warning"></span></a>
+        </form>
       </div>
     </div>
   </nav>
@@ -91,3 +99,24 @@
 </body>
 
 </html>
+
+<!-- <nav class="navbar fixed-top navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/index.html""><img src="
+      https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt=" logo.png"
+      width="80" height="24"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="/index.html"">HOME</a>
+        <a class=" nav-link" href="#">CONTACT</a>
+        <a class="nav-link" href="#">SIGN IN</a>
+        <a href=""><i class="fa" style="font-size: 24px">&#xf07a;</i><span id="cart-count"
+            class="badge text-bg-warning"></span></a>
+      </div>
+    </div>
+  </div>
+</nav> -->
