women categogies complete final UI

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/template/men-categories.html">Men</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/template/women-categories.html">Women</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
@@ -43,10 +49,6 @@
   <header>
     <div class="container" id="men-women-container"></div>
   </header>
-  <div class="wrapper">
-    <img class="shoes-parallax"
-      src="https://t3.ftcdn.net/jpg/03/15/06/10/360_F_315061039_JPz3A8Yd64Ugsy2T6Ez6E9IPwAhs3ftD.jpg">
-  </div>
   <section class="mt5">
     <h1 class="text-center best-seller">BEST SELLER</h1>
   </section>
@@ -87,20 +89,7 @@
       <div class="row-cols-auto d-flex">
         <div class="col-sm-3">
           <input type="email" class="form-control" id="exampleFormControlInput" placeholder="Enter Your Email">
-          <button type="button" class="btn btn-light ">Subscibe</button>
         </div>
-      </div>
-      <div class="col-md-6 col-lg-4">
-        <h3 class="mb-4 mbr-fonts-style footer-title display-5">Contact Us</h3>
-        <div class="mbr-footer-list mbr-fonts-style display-4">
-          <ul class="list">
-            <li>Phone: +1 (0) 000 0000 001</li>
-            <li>Email: yourmail@example.com</li>
-            <li>Address: 1234 Street Name City, AA 99999</li>
-          </ul>
-        </div>
-      </div>
-    </div>
   </footer>
   <script>
     getJSONDataForContainer("/data/index.json");
