remove role at the cart icon

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link">Sign in</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
+        <form class="d-flex">
           <a href=""><i class="fa" style="font-size: 24px">&#xf07a;</i><span id="cart-count"
               class="badge text-bg-warning"></span></a>
         </form>
