--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             <h5 class="card-title">Bow-Tie Mesh Mules - Nude</h5>
             <p>₱1000</p>
             <p class="card-text pt-2"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <a href="/template/mules.html"><button type="button" class="btn btn-suede btn-warning float-end">Go to
+            <a href="/template/mules.html"><button type="button"
+                class="btn rounded-pill btn-suede btn-warning float-end">Go to
                 Shop</button></a>
           </div>
         </div>
@@ -98,7 +99,7 @@
             <p>₱4000</p>
             <p class="card-text pt-2"><small class="text-muted">Last updated 3 mins ago</small></p>
             <a href="/template/minimal-sneakers.html"><button type="button"
-                class="btn btn-suede btn-warning float-end">Go to Shop</button></a>
+                class="btn btn-suede rounded-pill btn-warning float-end">Go to Shop</button></a>
           </div>
         </div>
       </div>
@@ -113,7 +114,8 @@
             <h5 class="card-title">Alden Toe Blucher</h5>
             <p>₱3000</p>
             <p class="card-text pt-2"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <a href="/template/derby-shoes.html"><button type="button" class="btn btn-suede btn-warning float-end">Go to
+            <a href="/template/derby-shoes.html"><button type="button"
+                class="btn rounded-pill btn-suede btn-warning float-end">Go to
                 Shop</button></a>
           </div>
         </div>
@@ -139,7 +141,7 @@
         </div>
         <div class="mb-3 w-25">
           <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
-          <button class="btn btn-warning float-end mt-3">Submit</button>
+          <button class="btn rounded-pill btn-warning float-end mt-3">Submit</button>
         </div>
         <iframe class="gmap"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.80254902792!2d121.04663401462257!3d14.553281089832637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c8efd99aad53%3A0xb64b39847a866fde!2skodego!5e0!3m2!1sen!2sph!4v1671691698160!5m2!1sen!2sph"
@@ -148,13 +150,19 @@
       </div>
     </div>
   </div>
-  <footer>
-    <div class="mt-5 m-5 ms-5 container">
-      <h2>Shazada</h2>
-      <br />
+  <footer id="footer">
+    <div class="mt-2 ms-5 container">
+      <span class="shazada-margin-bold">Shazada</span>
+      <p>Phone: 02-8123-4567</p>
+      <p>Email: group4@gmail.com</p>
+      <p>Address: kodego
+        18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
       <div class="row-cols-auto d-flex">
         <div class="col-sm-3">
-          <input type="email" class="form-control" id="exampleFormControlInput" placeholder="Enter Your Email">
+          <input type="email" class="form-control" id="form-control" placeholder="Enter Your Email">
+          <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
+            role="button">Subscribe</button>
+        </div>
   </footer>
   <script>
     getJSONDataForContainer("/data/index.json");
