--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" aria-current="page" href="/template/women-categories.html">Women</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/template/about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link">Sign in</a>
