--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
@@ -150,7 +153,7 @@
       </div>
     </div>
   </div>
-  <footer id="footer">
+  <footer id="shazada-footer">
     <div class="mt-2 ms-5 container">
       <span class="shazada-margin-bold">Shazada</span>
       <p>Phone: 02-8123-4567</p>
@@ -159,10 +162,15 @@
         18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
       <div class="row-cols-auto d-flex">
         <div class="col-sm-3">
-          <input type="email" class="form-control" id="form-control" placeholder="Enter Your Email">
+          <input type="email" class="form-control" class="footer-form-control" placeholder="Enter Your Email">
           <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
             role="button">Subscribe</button>
         </div>
+  </footer>
+  <footer class="copy-right-footer">
+    <div class="footer-index d-flex flex-column flex-sm-row justify-content-center py-1 my-1 mr-2 pt-4 bg-light">
+      <p class="copyright-footer">Website developed by: Group 4</p>
+    </div>
   </footer>
   <script>
     getJSONDataForContainer("/data/index.json");
