removed class in footer tag

--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
           <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
             role="button">Subscribe</button>
         </div>
+      </div>
+    </div>
   </footer>
   <!--Local fetching API-->
   <script>
