removed men-women-container header id to all pages

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       </div>
     </div>
   </nav>
+  <!--Local fetching API-->
   <header>
     <div class="container" id="men-women-container"></div>
   </header>
