added external css and implement media query

--- a/index.html
+++ b/index.html
@@ -30,17 +30,6 @@
   <!-- Navbar-->
   <nav class="navbar navbar-expand-lg fixed-top bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid" alt="logo.png" width="80" height="24"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse justify-content-end navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-          <a class="nav-link" href="#">CONTACT</a>
-          <a class="nav-link" href="signin.html">SIGN IN</a>
-          <i class="fa" style="font-size:24px">&#xf07a;</i><span id="cart-count" class="badge text-bg-light"></span>
-        </div>
       <nav class="navbar-brand" href="/index.html"><img src="
         https://consent.trustarc.com/v2/asset/16:49:57.509iyipn2_Slogonoback.png" class="img-fluid alt=" logo.png"
           width="80" height="24"></nav>
@@ -63,14 +52,13 @@
             <a class="nav-link" href="/template/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Sign in</a>
+            <a class="nav-link" href="/template/signin.html">Sign in</a>
           </li>
         </ul>
         <form class="d-flex">
           <i class="fa" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-size: 24px">&#xf07a;</i><span
             id="cart-count" class="badge text-bg-warning"></span>
         </form>
-
       </div>
     </div>
   </nav>
