--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
         <p>GET IN TOUCH WITH US AND WE CAN HELP YOU</p>
         <h2>Come to us or ask a question right now</h2>
         <div class="mb-3 w-25">
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Name" required>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name" required>
         </div>
         <div class="mb-3 w-25">
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your LastName" required>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="LastName" required>
         </div>
         <div class="mb-3 w-25">
           <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="Phone" required>
@@ -168,16 +168,16 @@
       </div>
     </div>
   </div>
-  <footer id="shazada-footer">
-    <div class="mt-2 ms-5 container">
+  <footer class="ms-3">
+    <div class="mt-2">
       <span style="font-size: 1.5rem;font-weight: bold;">Shazada</span>
       <p>Phone: 02-8123-4567</p>
       <p>Email: group4@gmail.com</p>
       <p>Address: kodego
         18th floor, The W Fifth Avenue, 5th Ave, Taguig, 1630 Metro Manila</p>
       <div class="row-cols-auto d-flex">
-        <div class="col-sm-3">
-          <input type="email" class="form-control" class="footer-form-control" placeholder="Enter Your Email">
+        <div class="mb-3 w-25">
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email" required>
           <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
             role="button">Subscribe</button>
         </div>
