footer-copyright implementation

--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
       </div>
     </div>
   </footer>
+  <div class="footer bg-light p-2 text-center fw-bold pt-4">
+    <p>© 2023 Copyright: shazada.com</p>
+  </div>
   <!--Local fetching API-->
   <script>
     getJSONDataForContainer("/data/index.json");
