change set import to push import

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             message: strMessage.value
           };
 
-          set(userContact, contactuser);
+          push(userContact, contactuser);
           strFirstName.value = "";
           strLastName.value = "";
           strPhone.value = "";
