Add login and Google login function, updated sign up

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a class="nav-link" href="/template/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/template/signin.html">Sign in</a>
+            <a class="nav-link" href="/template/signin.html" id="lnkSignIn">Sign in</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -184,8 +184,8 @@
       <div class="row-cols-auto d-flex">
         <div class="mb-3 w-25">
           <input type="email" class="form-control" id="txtSubs" placeholder="Email" required>
-          <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit"
-            role="button" id="btnSubs">Subscribe</button>
+          <button href="" class="btn rounded-pill btn-white mt-3 text-bg-warning" type="submit" role="button"
+            id="btnSubs">Subscribe</button>
         </div>
       </div>
     </div>
@@ -217,15 +217,16 @@
 
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
     import { getDatabase, ref, set, push, onValue } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-database.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
 
     const firebaseConfig = {
-        apiKey: "AIzaSyD-0VAnfTH3nMxfQQd5jqNuSnZexDy71tk",
-        authDomain: "shazada-8390a.firebaseapp.com",
-        databaseURL: "https://shazada-8390a-default-rtdb.asia-southeast1.firebasedatabase.app",
-        projectId: "shazada-8390a",
-        storageBucket: "shazada-8390a.appspot.com",
-        messagingSenderId: "78486050481",
-        appId: "1:78486050481:web:b981e064b469ec91a53490"
+      apiKey: "AIzaSyD-0VAnfTH3nMxfQQd5jqNuSnZexDy71tk",
+      authDomain: "shazada-8390a.firebaseapp.com",
+      databaseURL: "https://shazada-8390a-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "shazada-8390a",
+      storageBucket: "shazada-8390a.appspot.com",
+      messagingSenderId: "78486050481",
+      appId: "1:78486050481:web:b981e064b469ec91a53490"
     };
 
     const app = initializeApp(firebaseConfig);
@@ -246,6 +247,16 @@
     submitContact.addEventListener("click", contactUs);
     subscribe.addEventListener("click", subscribeEmail);
 
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        const uid = user.uid;
+        document.getElementById("lnkSignIn").innerHTML = "Sign Out";
+      } else {
+        window.location.replace("index.html");
+        document.getElementById("lnkSignIn").innerHTML = "Sign In";
+      }
+    });
+
     function subscribeEmail() {
 
       if (txtSubs.value == "") {
@@ -258,38 +269,38 @@
         push(userSubs, subsuser);
         strSubs.value = "";
         console.log(subsuser);
-        alert("Thank you for subscribing! You will receieve email from us regarding news and promotions regarding our products.")
+        alert("Thank you for subscribing! You will receive email from us regarding news and promotions regarding our products.")
       }
     }
 
     function contactUs() {
-        if (txtFirstName.value == "" || txtLastName.value == "" || txtPhone.value == "" || txtEmail.value == "" || txtMessage.value == "") {
-            alert("Fields must not be empty!")
+      if (txtFirstName.value == "" || txtLastName.value == "" || txtPhone.value == "" || txtEmail.value == "" || txtMessage.value == "") {
+        alert("Fields must not be empty!")
+      } else {
+        if (isNaN(txtPhone.value) == true) {
+          alert("Please enter a valid phone number.")
         } else {
-            if (isNaN(txtPhone.value) == true) {
-                alert("Please enter a valid phone number.")
-            } else {
 
-                const contactuser = {
-                    firstname: strFirstName.value,
-                    lastname: strLastName.value,
-                    phone: strPhone.value,
-                    emailadd: strEmail.value,
-                    message: strMessage.value
-                };
+          const contactuser = {
+            firstname: strFirstName.value,
+            lastname: strLastName.value,
+            phone: strPhone.value,
+            emailadd: strEmail.value,
+            message: strMessage.value
+          };
 
-                set(userContact, contactuser);
-                strFirstName.value = "";
-                strLastName.value = "";
-                strPhone.value = "";
-                strEmail.value = "";
-                strMessage.value = "";
-                console.log(contactuser);
-                alert("Thank you for contacting us! Please expect an email from us regarding your concern.")
-            }
+          set(userContact, contactuser);
+          strFirstName.value = "";
+          strLastName.value = "";
+          strPhone.value = "";
+          strEmail.value = "";
+          strMessage.value = "";
+          console.log(contactuser);
+          alert("Thank you for contacting us! Please expect an email from us regarding your concern.")
         }
+      }
     }
-</script>
+  </script>
 </body>
 
 </html>
