Updated Sign In and Sign Out

--- a/index.html
+++ b/index.html
@@ -238,9 +238,16 @@
     const submitContact = document.getElementById("btnsubmitContact");
     const strSubs = document.getElementById("txtSubs");
     const subscribe = document.getElementById("btnSubs");
+    const signOut = document.getElementsByName("Sign Out");
 
     submitContact.addEventListener("click", contactUs);
     subscribe.addEventListener("click", subscribeEmail);
+    signOut.addEventListener("click", signOut);
+
+    function signOut(auth) {
+        alert("You have signed out.");
+        document.getElementById("lnkSignIn").innerHTML = "Sign In";
+    }
 
     onAuthStateChanged(auth, (user) => {
       if (user) {
