Updated link, testing error

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         const uid = user.uid;
         document.getElementById("lnkSignIn").innerHTML = "Sign Out";
       } else {
-        window.location.replace("index.html");
+        window.location.replace("https://shazada.vercel.app/");
         document.getElementById("lnkSignIn").innerHTML = "Sign In";
       }
     });
