changed title bar per categories

--- a/minimal-cart.html
+++ b/minimal-cart.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Minimal Sneakers</title>
+  <title>Minimal Sneakers Cart Items</title>
   <!--META TAGS-->
   <meta charset="UTF-8">
   <meta name="description" content="online shoes shopping cart">
