--- a/oxford-cart.html
+++ b/oxford-cart.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Minimal Sneakers</title>
+  <title>Oxford Cart Items</title>
   <!--META TAGS-->
   <meta charset="UTF-8">
   <meta name="description" content="online shoes shopping cart">
