--- a/derby-cart.html
+++ b/derby-cart.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Oxford Cart Items</title>
+  <title>Derby Cart Items</title>
   <!--META TAGS-->
   <meta charset="UTF-8">
   <meta name="description" content="online shoes shopping cart">
@@ -51,7 +51,7 @@
             <a class="nav-link" href="/template/signin.html">Sign in</a>
           </li>
         </ul>
-        <a href="/derby-cart.html">
+        <a href="/oxford-cart.html">
           <div class="cart">
             <i class="bi bi-cart2"></i>
             <div id="cartAmount" class="cartAmount">0</div>
@@ -69,7 +69,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
-  <script src="/app/js/data/oxford.js"></script>
+  <script src="/app/js/data/derby.js"></script>
   <script src="/app/js/cart.js"></script>
 </body>
 
