--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,7 @@
             <a class="nav-link" href="/template/signin.html">Sign in</a>
           </li>
         </ul>
-        <a href="/oxford-cart.html">
+        <a href="/cart.html">
           <div class="cart">
             <i class="bi bi-cart2"></i>
             <div id="cartAmount" class="cartAmount">0</div>
